# miniCAP

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.test.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  locust.yml  macos.yml  style.yml  typecheck.yml  ubuntu.yml  windows.yml
docs/demo/: generate_demo_captchas.py
minicap/: __init__.py  api.py  captcha.py  database.py  main.py  schemas.py
test/: conftest.py  test_api.py  test_captcha.py
test/locust/: locustfile.py
