[project]
name = "miniCAP"
version = "1.1.0"
description = "A simple and minimal microservice for generating and validating CAPTCHA"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.22.1",
    "fastapi==0.128.0",
    "pillow==12.1.0",
    "pydantic==2.12.5",
    "sqlalchemy[asyncio]==2.0.46",
    "uvicorn==0.40.0",
]

[tool.uv]
dev-dependencies = [
    "httpx==0.28.1",
    "locust==2.37.14",
    "mypy==1.17.0",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "pytest==8.4.1",
    "ruff==0.12.5",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]
