[project]
name = "miniCAP"
version = "1.1.0"
description = "A simple and minimal microservice for generating and validating CAPTCHA"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite~=0.22",
    "fastapi~=0.128",
    "pillow~=12.1",
    "pydantic~=2.12",
    "sqlalchemy[asyncio]~=2.0",
    "uvicorn~=0.40",
]

[dependency-groups]
dev = [
    "httpx~=0.28",
    "locust~=2.43",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
    "pytest~=9.0",
    "ruff~=0.14",
    "ty~=0.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]
